TextureEditor.js, UndoArray.js

--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -139,6 +139,7 @@
 		<script src="/ecs/engine/editor/MaterialTab.js"></script>
 
 	<!-- script src="/ecs/engine/editor/TextureTab.js"></script -->
+		<script src="/ecs/engine/src/editors/UndoArray.js"></script>
 		<script src="/ecs/engine/src/editors/editor-helpers.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/texture-tab.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/texture-viewer-ui.js"></script>
