--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -155,10 +155,14 @@
 		<script src="/ecs/engine/src/editors/texture-editor/clone-texture-ui.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/replace-image-ui.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/exit-editor-ui.js"></script>
+
 		<script src="/ecs/engine/src/editors/texture-editor/TextureManager.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureEditor.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureViewer.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureViewerCenter.js"></script>
+
+		<script src="/ecs/engine/src/editors/texture-editor/createTextureButton.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/replaceImageButton.js"></script>
 
 		<script src="/ecs/engine/editor/ViewportTab.js"></script>
 
