separate watcher files

--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -160,7 +160,15 @@
 		<script src="/ecs/engine/src/editors/texture-editor/TextureViewer.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureManager.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureEditor.js"></script>
+
+		<script src="/ecs/engine/src/editors/texture-editor/texture-editor.js"></script>
+
+		<script src="/ecs/engine/src/editors/texture-editor/key-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/vector-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/entities-droplist-onchange-watcher.js"></script>
+
 		<script src="/ecs/engine/src/editors/texture-editor/TextureViewerCenter.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/texture-editor-watchers.js"></script>
 
 		<script src="/ecs/engine/src/editors/texture-editor/createTextureButton.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/replaceImageButton.js"></script>
