--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -157,21 +157,23 @@
 		<script src="/ecs/engine/src/editors/texture-editor/replace-image-ui.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/exit-editor-ui.js"></script>
 
-		<script src="/ecs/engine/src/editors/texture-editor/TextureViewer.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureManager.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/TextureViewer.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureEditor.js"></script>
 
 		<script src="/ecs/engine/src/editors/texture-editor/texture-editor.js"></script>
-
 		<script src="/ecs/engine/src/editors/texture-editor/key-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/vector-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/entities-droplist-onchange-watcher.js"></script>
-
-		<script src="/ecs/engine/src/editors/texture-editor/TextureViewerCenter.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/text-input-onchange-watcher.js"></script>
+	<!-- script src="/ecs/engine/src/editors/texture-editor/value-input-onchange-watcher.js"></script -->
+	<!-- script src="/ecs/engine/src/editors/texture-editor/vector-x-input-onchange-watcher.js"></script -->
+	<!-- script src="/ecs/engine/src/editors/texture-editor/vector-y-input-onchange-watcher.js"></script -->
+		<script src="/ecs/engine/src/editors/texture-editor/texture-viewer-center.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/texture-editor-watchers.js"></script>
 
-		<script src="/ecs/engine/src/editors/texture-editor/createTextureButton.js"></script>
-		<script src="/ecs/engine/src/editors/texture-editor/replaceImageButton.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/create-texture-entity.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/replace-texture-image.js"></script>
 
 		<script src="/ecs/engine/editor/ViewportTab.js"></script>
 
