value-input-onchange-watcher.js

--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -166,7 +166,7 @@
 		<script src="/ecs/engine/src/editors/texture-editor/vector-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/entities-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/text-input-onchange-watcher.js"></script>
-	<!-- script src="/ecs/engine/src/editors/texture-editor/value-input-onchange-watcher.js"></script -->
+		<script src="/ecs/engine/src/editors/texture-editor/value-input-onchange-watcher.js"></script>
 	<!-- script src="/ecs/engine/src/editors/texture-editor/vector-x-input-onchange-watcher.js"></script -->
 	<!-- script src="/ecs/engine/src/editors/texture-editor/vector-y-input-onchange-watcher.js"></script -->
 		<script src="/ecs/engine/src/editors/texture-editor/texture-viewer-center.js"></script>
