vector-input-onmouse-events.js

--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -168,7 +168,8 @@
 		<script src="/ecs/engine/src/editors/texture-editor/text-input-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/value-input-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/vector-input-onchange-watchers.js"></script>
-
+	<!-- script src="/ecs/engine/src/editors/texture-editor/value-input-onmouse-events.js"></script -->
+		<script src="/ecs/engine/src/editors/texture-editor/vector-input-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/texture-viewer-center.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/texture-editor-watchers.js"></script>
 
