--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -356,8 +356,8 @@
 
 		//	Viewport tab.
 
-			TabUI.Texture.role.classList.add("active");
-			TabUI.Texture.tab.classList.add("in","active");
+			TabUI.Editor.role.classList.add("active");
+			TabUI.Editor.tab.classList.add("in","active");
 		//	TabUI.Viewport.role.classList.add("active");
 		//	TabUI.Viewport.tab.classList.add("in","active");
 
