--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -331,7 +331,7 @@
 
 			console.log( {"object3DEditor": object3DEditor} ); // debug!
 			console.log( {"materialEditor": materialEditor} ); // debug!
-		//	console.log( {"textureEditor" : textureEditor}  ); // debug!
+			console.log( {"textureEditor" : textureEditor}  ); // debug!
 
 		</script>
 
