--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -159,6 +159,8 @@
 		<script src="/ecs/engine/src/editors/texture-editor/texture-editor-watchers.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/create-texture-entity.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/replace-texture-image.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/undo-redo-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/exit-edit-onmouse-events.js"></script>
 
 		<script src="/ecs/engine/editor/ViewportTab.js"></script>
 
