material exit, undo, redo, buttons onmouse events

--- a/engine/pre-alpha/23/index.html
+++ b/engine/pre-alpha/23/index.html
@@ -136,6 +136,10 @@
 	<!-- script src="/ecs/engine/editor/MaterialTab.js"></script -->
 		<script src="/ecs/engine/src/editors/material-editor/material-tab-ui.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/MaterialManager.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/MaterialEditor.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/material-editor.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/undo-redo-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/exit-edit-onmouse-events.js"></script>
 
 	<!-- script src="/ecs/engine/editor/TextureTab.js"></script -->
 		<script src="/ecs/engine/src/editors/texture-editor/texture-tab-ui.js"></script>
@@ -143,6 +147,8 @@
 		<script src="/ecs/engine/src/editors/texture-editor/TextureViewer.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureEditor.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/texture-editor.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/undo-redo-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/texture-editor/exit-edit-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/key-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/vector-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/entities-droplist-onchange-watcher.js"></script>
