--- a/engine/pre-alpha/23/index.html
+++ b/engine/pre-alpha/23/index.html
@@ -144,6 +144,7 @@
 		<script src="/ecs/engine/src/editors/material-editor/vector-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/color-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/entity-droplist-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/text-input-onchange-watcher.js"></script>
 
 		<script src="/ecs/engine/src/editors/material-editor/exit-edit-onmouse-events.js"></script>
 
