--- a/engine/pre-alpha/23/index.html
+++ b/engine/pre-alpha/23/index.html
@@ -137,7 +137,7 @@
 		<script src="/ecs/engine/src/editors/material-editor/material-tab-ui.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/MaterialManager.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/MaterialEditor.js"></script>
-		<script src="/ecs/engine/src/editors/material-editor/material-editor.js"></script>
+	<!-- script src="/ecs/engine/src/editors/material-editor/material-editor.js"></script -->
 		<script src="/ecs/engine/src/editors/material-editor/undo-redo-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/map-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/key-droplist-onchange-watcher.js"></script>
@@ -153,7 +153,7 @@
 		<script src="/ecs/engine/src/editors/texture-editor/TextureManager.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureViewer.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureEditor.js"></script>
-		<script src="/ecs/engine/src/editors/texture-editor/texture-editor.js"></script>
+	<!-- script src="/ecs/engine/src/editors/texture-editor/texture-editor.js"></script -->
 		<script src="/ecs/engine/src/editors/texture-editor/undo-redo-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/key-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/vector-droplist-onchange-watcher.js"></script>
