--- a/engine/pre-alpha/23/index.html
+++ b/engine/pre-alpha/23/index.html
@@ -146,6 +146,7 @@
 		<script src="/ecs/engine/src/editors/material-editor/entity-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/text-input-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/value-input-onchange-watcher.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/vector-input-onchange-watchers.js"></script>
 
 		<script src="/ecs/engine/src/editors/material-editor/exit-edit-onmouse-events.js"></script>
 
