--- a/engine/pre-alpha/23/index.html
+++ b/engine/pre-alpha/23/index.html
@@ -390,7 +390,7 @@
 			});
 
 			console.log( {"object3DEditor": object3DEditor} ); // debug!
-		//	console.log( {"materialEditor": materialEditor} ); // debug!
+			console.log( {"materialEditor": materialEditor} ); // debug!
 			console.log( {"textureEditor" : textureEditor } ); // debug!
 
 		</script>
