material-editor-watchers.js

--- a/engine/pre-alpha/23/index.html
+++ b/engine/pre-alpha/23/index.html
@@ -151,6 +151,7 @@
 		<script src="/ecs/engine/src/editors/material-editor/value-input-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/vector-input-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/color-input-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/material-editor-watchers.js"></script>
 
 		<script src="/ecs/engine/src/editors/material-editor/exit-edit-onmouse-events.js"></script>
 
