create, clone, remove buttons

--- a/engine/pre-alpha/23/index.html
+++ b/engine/pre-alpha/23/index.html
@@ -152,8 +152,9 @@
 		<script src="/ecs/engine/src/editors/material-editor/vector-input-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/color-input-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/material-editor-watchers.js"></script>
-
 		<script src="/ecs/engine/src/editors/material-editor/exit-edit-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/create-material-entity.js"></script>
+
 
 	<!-- script src="/ecs/engine/editor/TextureTab.js"></script -->
 		<script src="/ecs/engine/src/editors/texture-editor/texture-tab-ui.js"></script>
