--- a/engine/pre-alpha/23/index.html
+++ b/engine/pre-alpha/23/index.html
@@ -377,7 +377,7 @@
 
 				function rename( material ){
 					if ( material.name ) return;
-					material.name = "mtl"+material.id;
+					material.name = "material ";
 				}
 
 				function addEntity( material ){
