--- a/engine/pre-alpha/23/index.html
+++ b/engine/pre-alpha/23/index.html
@@ -154,7 +154,8 @@
 		<script src="/ecs/engine/src/editors/material-editor/material-editor-watchers.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/exit-edit-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/create-material-entity.js"></script>
-
+		<script src="/ecs/engine/src/editors/material-editor/clone-material-entity.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/remove-material-entity.js"></script>
 
 	<!-- script src="/ecs/engine/editor/TextureTab.js"></script -->
 		<script src="/ecs/engine/src/editors/texture-editor/texture-tab-ui.js"></script>
