--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -157,6 +157,9 @@
 		<script src="/ecs/engine/src/editors/material-editor/color-input-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/material-editor-watchers.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/exit-edit-onmouse-events.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/create-material-entity.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/clone-material-entity.js"></script>
+		<script src="/ecs/engine/src/editors/material-editor/remove-material-entity.js"></script>
 
 		<script src="/ecs/engine/src/editors/texture-editor/texture-tab-ui.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureManager.js"></script>
