--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -118,8 +118,8 @@
 
 		</script>
 
+		<script src="/ecs/engine/core/EntityManager.js"></script>
 		<script src="/ecs/engine/core/enviroment.js"></script>
-		<script src="/ecs/engine/core/entity.js"></script>
 		<script src="/ecs/engine/core/helpers.js"></script>
 		<script src="/ecs/engine/core/localPlayer.js"></script>
 		<script src="/ecs/engine/core/cameraControls.js"></script>
@@ -127,7 +127,6 @@
 		<script src="/ecs/engine/core/keyInputControls.js"></script>
 		<script src="/ecs/engine/core/joystickControls.js"></script>
 		<script src="/ecs/engine/core/keyboard.js"></script>
-
 		<script src="/ecs/engine/src/editors/UndoArray.js"></script>
 		<script src="/ecs/engine/src/editors/editor-helpers.js"></script>
 
