--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -138,6 +138,7 @@
 		</script>
 
 	<!--                                   OBJECT3D EDITOR                                        -->
+		<script src="/ecs/engine/src/editors/geometry-editor/SceneEditor.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
 
 		<script>
