scene-editor-manager.js

--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -137,9 +137,10 @@
 
 		</script>
 
-	<!--                                   OBJECT3D EDITOR                                        -->
+									<!-- OBJECT3D EDITOR -->
 		<script src="/ecs/engine/src/editors/geometry-editor/SceneEditor.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
+	<!-- script src="/ecs/engine/src/editors/geometry-editor/scene-editor-manager.js"></script -->
 
 		<script>
 
@@ -1365,7 +1366,7 @@
 
 		</script>
 
-	<!--                                   MATERIAL EDITOR                                        -->
+									<!-- MATERIAL EDITOR -->
 		<script src="/ecs/engine/src/editors/material-editor/material-tab-ui.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/MaterialManager.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/MaterialEditor.js"></script>
@@ -1387,8 +1388,7 @@
 		<script src="/ecs/engine/src/editors/material-editor/create-material-entity.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/clone-material-entity.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/remove-material-entity.js"></script>
-
-	<!--                                   TEXTURE EDITOR                                        -->
+									<!-- TEXTURE EDITOR -->
 		<script src="/ecs/engine/src/editors/texture-editor/texture-tab-ui.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureManager.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/TextureViewer.js"></script>
@@ -1407,8 +1407,6 @@
 		<script src="/ecs/engine/src/editors/texture-editor/exit-edit-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/create-texture-entity.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/replace-texture-image.js"></script>
-
-	<!--                                    VIEWPORT TAB                                        -->
 
 		<script src="/ecs/engine/editor/ViewportTab.js"></script>
 
