--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -142,6 +142,7 @@
 		<script src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
 	<!-- script src="/ecs/engine/src/editors/geometry-editor/scene-editor-manager.js"></script -->
 	<!-- script src="/ecs/engine/src/editors/geometry-editor/entity-droplist-onchange-watcher.js"></script -->
+		<script src="/ecs/engine/src/editors/geometry-editor/create-geometry-entity.js"></script>
 
 		<script>
 
@@ -829,7 +830,7 @@
 						//	debugMode && console.log("reset", vectorSelect.value);
 						}, 250);
 					});
-
+/*
 					create_geometry_button.addEventListener( "click", function(){
 						clearTimeout( interval );
 						interval = setTimeout(function(){
@@ -880,7 +881,7 @@
 
 						}, 250);
 					});
-
+*/
 					clone_geometry_button.addEventListener( "click", function(){
 						clearTimeout( interval );
 
