--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -141,7 +141,7 @@
 		<script src="/ecs/engine/src/editors/geometry-editor/SceneEditor.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
 	<!-- script src="/ecs/engine/src/editors/geometry-editor/scene-editor-manager.js"></script -->
-	<!-- script src="/ecs/engine/src/editors/geometry-editor/entity-droplist-onchange-watcher.js"></script -->
+		<script src="/ecs/engine/src/editors/geometry-editor/entity-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/create-geometry-entity.js"></script>
 
 		<script>
