scene-editor-manager.js

--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -140,7 +140,7 @@
 									<!-- OBJECT3D EDITOR -->
 		<script src="/ecs/engine/src/editors/geometry-editor/SceneEditor.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
-	<!-- script src="/ecs/engine/src/editors/geometry-editor/scene-editor-manager.js"></script -->
+		<script src="/ecs/engine/src/editors/geometry-editor/scene-editor-manager.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/entity-droplist-onchange-watcher.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/create-geometry-entity.js"></script>
 
@@ -832,8 +832,11 @@
 					});
 
 				})();
-
 /*
+				(function(){
+
+					var interval;
+
 					create_geometry_button.addEventListener( "click", function(){
 						clearTimeout( interval );
 						interval = setTimeout(function(){
@@ -952,7 +955,8 @@
 						//	entity_droplist.dispatchEvent(new Event("change"));
 						}, 250);
 					});
-*/
+
+				})();
 
 			//	Editor Tab watchers.
 
@@ -1037,7 +1041,7 @@
 				//	});
 
 				})();
-
+*/
 				function addtoOctree( value ){
 
 				//	DevNote: You have to add all objects with the 
