--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -1424,7 +1424,7 @@
 			TabUI.Geometry.role.classList.add("active");
 			TabUI.Geometry.tab.classList.add("in","active");
 
-			console.log( {"object3dEditor": object3dEditor} ); // debug!
+			console.log( {"sceneEditor": sceneEditor} ); // debug!
 			console.log( {"materialEditor": materialEditor} ); // debug!
 			console.log( {"textureEditor" : textureEditor } ); // debug!
 
