vector-droplist-onchange-watchers.js

--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -140,6 +140,7 @@
 									<!-- OBJECT3D EDITOR -->
 		<script src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/SceneEditor.js"></script>
+		<script src="/ecs/engine/src/editors/geometry-editor/vector-droplist-onchange-watchers.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/entity-droplist-onchange-watchers.js"></script>
 		<!-- script src="/ecs/engine/src/editors/geometry-editor/scene-editor-manager.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/create-geometry-entity.js"></script -->
