--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -142,6 +142,8 @@
 		<script src="/ecs/engine/src/editors/geometry-editor/SceneEditor.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/vector-droplist-onchange-watchers.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/entity-droplist-onchange-watchers.js"></script>
+		<script src="/ecs/engine/src/editors/geometry-editor/vector-input-onchange-watchers.js"></script>
+
 		<!-- script src="/ecs/engine/src/editors/geometry-editor/scene-editor-manager.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/create-geometry-entity.js"></script -->
 
