vector-input-onmouse-events.js

--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -143,6 +143,7 @@
 		<script src="/ecs/engine/src/editors/geometry-editor/vector-droplist-onchange-watchers.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/entity-droplist-onchange-watchers.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/vector-input-onchange-watchers.js"></script>
+		<script src="/ecs/engine/src/editors/geometry-editor/vector-input-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/object-editor-watchers.js"></script>
 	<!-- script src="/ecs/engine/src/editors/geometry-editor/create-geometry-entity.js"></script -->
 
