reset-vectors-onmouse-events.js

--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -129,14 +129,12 @@
 		<script src="/ecs/engine/core/joystickControls.js"></script>
 		<script src="/ecs/engine/src/editors/UndoArray.js"></script>
 		<script src="/ecs/engine/src/editors/editor-helpers.js"></script>
-
 		<script> //	src="/ecs/engine/src/meshworld/meshworld-tab-ui.js">
 
 			TabUI.add( "MeshWorld", "meshworld-tab" );
 			TabUI.append("MeshWorld");
 
 		</script>
-
 									<!-- OBJECT EDITOR -->
 		<script src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/ObjectEditor.js"></script>
@@ -145,6 +143,7 @@
 		<script src="/ecs/engine/src/editors/geometry-editor/vector-input-onchange-watchers.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/vector-input-onmouse-events.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/object-editor-watchers.js"></script>
+		<script src="/ecs/engine/src/editors/geometry-editor/reset-vectors-onmouse-events.js"></script>
 	<!-- script src="/ecs/engine/src/editors/geometry-editor/create-geometry-entity.js"></script -->
 
 									<!-- MATERIAL EDITOR -->
