--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -129,10 +129,10 @@
 		<script src="/ecs/engine/core/joystickControls.js"></script>
 		<script src="/ecs/engine/src/editors/UndoArray.js"></script>
 		<script src="/ecs/engine/src/editors/editor-helpers.js"></script>
-		<script> //	src="/ecs/engine/src/meshworld/meshworld-tab-ui.js">
+		<script> //	src="/ecs/engine/src/editors/mesh-editor/editor-tab-ui.js">
 
-			TabUI.add( "MeshWorld", "meshworld-tab" );
-			TabUI.append("MeshWorld");
+			TabUI.add( "Editor", "editor-tab" );
+			TabUI.append("Editor");
 
 		</script>
 									<!-- OBJECT EDITOR -->
@@ -145,7 +145,6 @@
 		<script src="/ecs/engine/src/editors/geometry-editor/object-editor-watchers.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/reset-vectors-onmouse-events.js"></script>
 	<!-- script src="/ecs/engine/src/editors/geometry-editor/create-geometry-entity.js"></script -->
-
 									<!-- MATERIAL EDITOR -->
 		<script src="/ecs/engine/src/editors/material-editor/material-tab-ui.js"></script>
 		<script src="/ecs/engine/src/editors/material-editor/MaterialManager.js"></script>
@@ -188,6 +187,7 @@
 		<script src="/ecs/engine/src/editors/texture-editor/create-texture-entity.js"></script>
 		<script src="/ecs/engine/src/editors/texture-editor/replace-texture-image.js"></script>
 
+		<script src="/ecs/engine/src/meshworld/meshworld-tab-ui.js"></script>
 		<script src="/ecs/engine/editor/ViewportTab.js"></script>
 
 		<script>
