--- a/engine/pre-alpha/24/index.html
+++ b/engine/pre-alpha/24/index.html
@@ -127,14 +127,12 @@
 		<script src="/ecs/engine/core/keyboardState.js"></script>
 		<script src="/ecs/engine/core/keyInputControls.js"></script>
 		<script src="/ecs/engine/core/joystickControls.js"></script>
+
+										<!-- EDITORS -->
 		<script src="/ecs/engine/src/editors/UndoArray.js"></script>
 		<script src="/ecs/engine/src/editors/editor-helpers.js"></script>
-		<script> //	src="/ecs/engine/src/editors/mesh-editor/editor-tab-ui.js">
+		<script	src="/ecs/engine/src/editors/object-editor/editor-tab-ui.js"></script>
 
-			TabUI.add( "Editor", "editor-tab" );
-			TabUI.append("Editor");
-
-		</script>
 									<!-- OBJECT EDITOR -->
 		<script src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
 		<script src="/ecs/engine/src/editors/geometry-editor/ObjectEditor.js"></script>
