--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -128,19 +128,16 @@
 		<script src="/ecs/engine/src/editors/UndoArray.js"></script>
 		<script src="/ecs/engine/src/editors/editor-helpers.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/editor-tab-ui.js"></script>
-
-
-
+		<script	src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
+		<script	src="/ecs/engine/src/editors/material-editor/material-tab-ui.js"></script>
+		<script	src="/ecs/engine/src/editors/texture-editor/texture-tab-ui.js"></script>
+		<script	src="/ecs/engine/src/meshworld/octree/meshworld-tab-ui.js"></script>
 
 		<script>
 
 			localPlayer.controller.movementSpeed = 10;
-			TabUI.Geometry.role.classList.add("active");
-			TabUI.Geometry.tab.classList.add("in","active");
-
-			console.log( {"objectEditor"  : objectEditor } );  // debug!
-			console.log( {"materialEditor": materialEditor} ); // debug!
-			console.log( {"textureEditor" : textureEditor } ); // debug!
+			TabUI.Editor.role.classList.add("active");
+			TabUI.Editor.tab.classList.add("in","active");
 
 		</script>
 
@@ -165,6 +162,10 @@
 				entities.add( mesh );
 				cameraControls.rigidObjects.push( mesh );
 			})();
+
+		//	console.log( {"geometryEditor": geometryEditor} ); // debug!
+		//	console.log( {"materialEditor": materialEditor} ); // debug!
+		//	console.log( {"textureEditor" : textureEditor } ); // debug!
 
 		</script>
 
