--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -108,11 +108,8 @@
 		<script src="/threejs/r96/examples/js/exporters/ColladaExporter.js"></script>
 
 		<script>
-		//	TabUI.
-			(function(){
-				var sidePanel = createSidePanel();
-				document.body.appendChild( sidePanel );
-			})();
+		//	Side Panel UI.
+			document.body.appendChild( createSidePanel() );
 		</script>
 
 		<script src="/ecs/engine/core/enviroment.js"></script>
