udpate mesh editor

--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -130,6 +130,8 @@
 		<script	src="/ecs/engine/src/editors/texture-editor/texture-tab-ui.js"></script>
 		<script	src="/ecs/engine/src/meshworld/octree/meshworld-tab-ui.js"></script>
 
+		<script	src="/ecs/engine/src/editors/object-editor/MeshEditor.js"></script>
+
 		<script>
 
 			localPlayer.controller.movementSpeed = 10;
