--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -142,6 +142,7 @@
 
 		<script	src="/ecs/engine/src/editors/object-editor/edges-helper.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/entity-droplist.js"></script>
+		<script	src="/ecs/engine/src/editors/object-editor/vector-droplist.js"></script>
 
 		<script>
 
