object editor-manager.js

--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -144,6 +144,7 @@
 		<script	src="/ecs/engine/src/editors/object-editor/vector-droplist.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/entity-droplist.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/vector-inputs.js"></script>
+		<script	src="/ecs/engine/src/editors/object-editor/editor-manager.js"></script>
 
 		<script>
 
