object editor reset-vectors.js, exit-edit-mode.js

--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -145,6 +145,8 @@
 		<script	src="/ecs/engine/src/editors/object-editor/entity-droplist.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/vector-inputs.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/editor-manager.js"></script>
+		<script	src="/ecs/engine/src/editors/object-editor/reset-vectors.js"></script>
+		<script	src="/ecs/engine/src/editors/object-editor/exit-edit-mode.js"></script>
 
 		<script>
 
