editor undo-button.js

--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -120,26 +120,25 @@
 		<script src="/ecs/engine/core/keyboardState.js"></script>
 		<script src="/ecs/engine/core/keyInputControls.js"></script>
 		<script src="/ecs/engine/core/joystickControls.js"></script>
-
 		<script src="/ecs/engine/core/EntityManager.js"></script>
+								  <!-- entity managers -->
 		<script src="/ecs/engine/editor/UndoArray.js"></script>
 		<script src="/ecs/engine/editor/editor-helpers.js"></script>
-
 		<script	src="/ecs/engine/src/editors/texture-editor/TextureManager.js"></script>
 		<script	src="/ecs/engine/src/editors/material-editor/MaterialManager.js"></script>
-
+									 <!-- editor ui -->
 		<script	src="/ecs/engine/src/editors/object-editor/editor-tab-ui.js"></script>
 		<script	src="/ecs/engine/src/editors/geometry-editor/geometry-tab-ui.js"></script>
 		<script	src="/ecs/engine/src/editors/material-editor/material-tab-ui.js"></script>
 		<script	src="/ecs/engine/src/editors/texture-editor/texture-tab-ui.js"></script>
 		<script	src="/ecs/engine/src/meshworld/octree/meshworld-tab-ui.js"></script>
-
+									  <!-- editors -->
 		<script	src="/ecs/engine/src/editors/object-editor/ObjectEditor.js"></script>
 		<script	src="/ecs/engine/src/editors/texture-editor/TextureEditor.js"></script>
 		<script	src="/ecs/engine/src/editors/material-editor/MaterialEditor.js"></script>
-
+									<!-- object editor -->
 		<script	src="/ecs/engine/src/editors/object-editor/EditorViewer.js"></script>
-
+		<script	src="/ecs/engine/src/editors/object-editor/undo-button.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/edges-helper.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/vector-droplist.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/entity-droplist.js"></script>
@@ -147,6 +146,8 @@
 		<script	src="/ecs/engine/src/editors/object-editor/editor-manager.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/reset-vectors.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/exit-edit-mode.js"></script>
+									<!-- material editor -->
+									<!-- texture  editor -->
 
 		<script>
 
