--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -143,6 +143,7 @@
 		<script	src="/ecs/engine/src/editors/object-editor/vector-droplist.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/entity-droplist.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/vector-inputs.js"></script>
+		<script	src="/ecs/engine/src/editors/object-editor/mouse-inputs.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/editor-manager.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/reset-vectors.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/exit-edit-mode.js"></script>
