--- a/engine/alpha/index.html
+++ b/engine/alpha/index.html
@@ -149,8 +149,12 @@
 		<script	src="/ecs/engine/src/editors/object-editor/editor-manager.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/reset-vectors.js"></script>
 		<script	src="/ecs/engine/src/editors/object-editor/exit-edit-mode.js"></script>
+
 									<!-- material editor -->
+
 									<!-- texture  editor -->
+
+		<script src="/ecs/engine/editor/Editor.js"></script>
 
 		<script>
 
